--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,22 @@
 {
-    "name": "weidner/goutte",
+    "name": "canaveensetia/goutte",
     "description": "Laravel 5 package for Gouette, a simple PHP Web Scraper",
     "license": "MIT",
     "keywords": ["goutte", "laravel"],
     "authors": [
         {
-            "name": "Daniel Weidner",
-            "email": "hallo@danielweidner.de"
+            "name": "Naveen Setia",
+            "email": "naveen.setia@icai.org"
         }
     ],
     "require": {
         "php": ">=5.4.0",
         "illuminate/support": "5.*",
-        "fabpot/goutte": "2.0.*"
+        "fabpot/goutte": "3.1.2"
     },
     "autoload": {
         "psr-4": {
-            "Weidner\\Goutte\\": "src/"
+            "canaveensetia\\Goutte\\": "src/"
         }
     },
     "extra": {
